<resources>
    <string name="app_name">Tutorial</string>

    !-- MainActivity  -->
    <string name="main_study_layout">レイアウトを学ぶ</string>
    <string name="main_study_adapter">アダプターを学ぶ</string>
    <string name="main_study_gradle">外部ライブラリを学ぶ</string>
    <string name="main_study_fragment">フラグメントを学ぶ</string>
    <string name="main_study_mvvm">MVVMを学ぶ</string>

    <!--  Tutorial2 layout  -->
    <string name="tutorial2_name">名前</string>
    <string name="tutorial2_please_input_name">名前を入力してください</string>
    <string name="tutorial2_gender_boy">男の子</string>
    <string name="tutorial2_gender_girl">女の子</string>
    <string name="tutorial2_cancel">キャンセル</string>
    <string name="tutorial2_register">登録</string>
    <string name="tutorial2_name_validation_error_blank">名前は空にできません。</string>

    <!-- Tutorial3 adapter -->
    <string name="tutorial3_adapter">アダプター</string>
    <string name="tutorial3_vertical">Vertical</string>
    <string name="tutorial3_horizontal">Horizontal</string>
    <string name="tutorial3_grid">Grid</string>
    <string name="tutorial3_ex_button">発展課題3</string>

    <!-- Tutorial4 library -->
    <string name="tutorial4_library">外部ライブラリ</string>
    <string name="tutorial4_button1">本田翼</string>
    <string name="tutorial4_button2">新垣結衣</string>
    <string name="tutorial4_button3">広瀬すず</string>
    <string name="tutorial4_button4">神谷えりな</string>
    <string name="tutorial4_effect">効果</string>
    <string name="tutorial4_normal">通常</string>
    <string name="tutorial4_rounded_corner">角丸</string>
    <string name="tutorial4_blur">ぼかし</string>
    <string name="tutorial4_toon">トゥーン</string>
    <string name="tutorial4_contrast">コントラスト</string>
    <string name="tutorial4_user_name">名前</string>
    <string name="tutorial4_user_age">年齢</string>
    <string name="tutorial4_user_gender">性別</string>
    <string name="tutorial4_ex_button">発展課題４</string>
    <string name="tutorial4_ex_edit">入力してください</string>
    <string name="tutorial4_ex_qr">QRコード生成</string>

    <!-- Tutorial5 fragment -->
    <string name="tutorial5_fragment_main">MainFragment</string>
    <string name="tutorial5_fragment_sub">SubFragment</string>
    <string name="tutorial5_fragment_separate">SeparateFragment</string>
    <string name="tutorial5_show_sub_fragment">サブフラグメントを表示する</string>
    <string name="tutorial5_show_confirm_dialog">確認ダイアログを表示</string>
    <string name="tutorial5_select_fragment_title">切り替えるフラグメントを選択してください</string>

    <!-- Tutorial6 mvvm -->
    <string name="tutorial6_search_android">検索[Android]</string>
    <string name="tutorial6_comment_num">コメント数: </string>
    <string name="tutorial6_like_count">いいね: </string>
    <string name="tutorial6_reaction_count">リアクション: </string>
    <string name="tutorial6_ex_button">発展課題６</string>
    <string name="tutorial6_ex_open_time">開催日時</string>
    <string name="tutorial6_ex_organizer">主催者</string>

</resources>