<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="userData"
            type="com.axiaworks.tutorial.library.UserData" />
        <variable
            name="activity"
            type="com.axiaworks.tutorial.library.Tutorial4Activity" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/user1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tutorial4_button1"
            android:onClick="@{() -> activity.onClickUser1()}"
            app:layout_constraintEnd_toStartOf="@+id/user2_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/user2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tutorial4_button2"
            android:onClick="@{() -> activity.onClickUser2()}"
            app:layout_constraintEnd_toStartOf="@+id/user3_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user1_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/user3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tutorial4_button3"
            android:onClick="@{() -> activity.onClickUser3()}"
            app:layout_constraintEnd_toStartOf="@+id/user4_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user2_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/user4_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tutorial4_button4"
            android:onClick="@{() -> activity.onClickUser4()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user3_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/effect_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="16dp"
            android:text="@string/tutorial4_effect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user1_button" />

        <Button
            android:id="@+id/effect_normal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tutorial4_normal"
            android:onClick="@{() -> activity.onClickNormal()}"
            app:layout_constraintEnd_toStartOf="@+id/effect_corner_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/effect_text_view" />

        <Button
            android:id="@+id/effect_corner_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tutorial4_rounded_corner"
            android:onClick="@{() -> activity.onClickCorner()}"
            app:layout_constraintBottom_toBottomOf="@+id/effect_normal_button"
            app:layout_constraintEnd_toStartOf="@+id/effect_blur_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/effect_normal_button"
            app:layout_constraintTop_toTopOf="@+id/effect_normal_button" />

        <Button
            android:id="@+id/effect_blur_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tutorial4_blur"
            android:onClick="@{() -> activity.onClickBlur()}"
            app:layout_constraintBottom_toBottomOf="@+id/effect_normal_button"
            app:layout_constraintEnd_toStartOf="@+id/effect_toon_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/effect_corner_button"
            app:layout_constraintTop_toTopOf="@+id/effect_normal_button" />

        <Button
            android:id="@+id/effect_toon_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tutorial4_toon"
            android:onClick="@{() -> activity.onClickToon()}"
            app:layout_constraintBottom_toBottomOf="@+id/effect_normal_button"
            app:layout_constraintEnd_toStartOf="@+id/effect_contrast_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/effect_blur_button"
            app:layout_constraintTop_toTopOf="@+id/effect_normal_button" />

        <Button
            android:id="@+id/effect_contrast_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tutorial4_contrast"
            android:onClick="@{() -> activity.onClickContract()}"
            app:layout_constraintBottom_toBottomOf="@+id/effect_normal_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/effect_toon_button"
            app:layout_constraintTop_toTopOf="@+id/effect_normal_button" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            app:userImage="@{userData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/effect_normal_button"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_text_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/tutorial4_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:text="@{userData.name}"
            app:layout_constraintBottom_toBottomOf="@+id/name_text_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_text_label"
            app:layout_constraintTop_toTopOf="@+id/name_text_label" />

        <TextView
            android:id="@+id/age_text_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tutorial4_user_age"
            app:layout_constraintStart_toStartOf="@+id/name_text_label"
            app:layout_constraintTop_toBottomOf="@+id/name_text_label" />

        <TextView
            android:id="@+id/age_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:age="@{userData.age}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/name_text_label"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

        <TextView
            android:id="@+id/gender_text_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tutorial4_user_gender"
            app:layout_constraintStart_toStartOf="@+id/age_text_label"
            app:layout_constraintTop_toBottomOf="@+id/age_text_label" />

        <TextView
            android:id="@+id/gender_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:gender="@{userData.gender}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gender_text_label"
            app:layout_constraintTop_toBottomOf="@+id/age_text_view" />

        <Button
            android:id="@+id/tutorial4_ex_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tutorial4_ex_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>